welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: identifier expected but integer literal found.
  var tableau = new Array[1,2,2]
                          ^golomb:4: error: ']' expected but ';' found.
  while(compteur<num)
^